src/components/CustomerPurchasesScreen.css
.card-content {
    flex-grow: 1;
}

.card-title button {
    background-color: lightseagreen;
    border-radius: 50%;
    border: none;
    color: white;
    font-size: 40px;
    /* Add these lines to ensure a square shape, which will become a circle with rounded corners */
    width: 40px;
    /* Make sure width and height are equal */
    height: 40px;
    display: flex;
    /*For centering the + sign*/
    align-items: center;
    justify-content: center;
    padding: 0;
    /*Remove default padding*/
}

.bg-jn {
    background-color: rgb(2, 65, 116);
}

.bg-hh {
    background-color: darkcyan;
}

.bg-none {
    background-color: black;
}

.customer-details {
    padding: 0 0.5rem;
    margin: 0;
}

.customer-details p {
    margin: 0.5rem 0;
}

.customer-details .detail-label {
    color: black;
    font-weight: 600;
}

.dietaryRestrictions {
    background-color: red;
    color: white;
    font-weight: 600;
    /* padding: 2px 5px; */
}

.edit-booking {
    color: black;
    background-color: white;
    font-size: 16px;
}

.edit-customer-form {
    justify-content: left;
}

.edit-customer-form div {
    width: 100%;
    padding: 4px;
    font-size: 18px;
}

.category-button,
.activity-button {
    padding: 10px;
    /* margin: 5px 0px; */
    width: 60%;
    margin: 10px auto;
    display: block;
    background-color: lightgrey;
    color: darkcyan;
    font-weight: 800;
}

.category-buttons-container {
    width: 100%;
    display: block;
    /* flex-direction: column; */
    /* align-items: center; */
}

.add-button {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    border: none;
    background-color: #007bff; /* Or your preferred color */
    color: white;
    font-size: 24px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    transition: background-color 0.2s ease;
  }

  

